# SpectroClean

./: .gitignore  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_use.py
spectro_clean/: __init__.py  cleaner.py  cli.py
tests/: test_cleaner.py
